# TrabalhoPratico

./: Barragem.cpp  Barragem.h  Bateria.cpp  Bateria.h  CMakeLists.txt  CentralEletrica.cpp  CentralEletrica.h  Deserto.cpp  Deserto.h  Edificio.cpp  Edificio.h  Favela.cpp  Favela.h  Floresta.cpp  Floresta.h  Fundicao.cpp  Fundicao.h  Ilha.cpp  Ilha.h  Lenhador.cpp  Lenhador.h  MinaCarvao.cpp  MinaCarvao.h  MinaFerro.cpp  MinaFerro.h  Mineiro.cpp  Mineiro.h  Montanha.cpp  Montanha.h  Operario.cpp  Operario.h  Pantano.cpp  Pantano.h  Pastagem.cpp  Pastagem.h  Recursos.cpp  Recursos.h  Serracao.cpp  Serracao.h  Trabalhadores.cpp  (+6 more)
