cmake_minimum_required(VERSION 3.20)
project(PraticoTrabalho)

set(CMAKE_CXX_STANDARD 14)

add_executable(PraticoTrabalho main.cpp Ilha.cpp Ilha.h Zona.cpp Zona.h Trabalhadores.cpp Trabalhadores.h Edificio.cpp Edificio.h Bateria.cpp Bateria.h CentralEletrica.cpp CentralEletrica.h Deserto.cpp Deserto.h Floresta.cpp Floresta.h Fundicao.cpp Fundicao.h Lenhador.cpp Lenhador.h MinaCarvao.cpp MinaCarvao.h MinaFerro.cpp MinaFerro.h Mineiro.cpp Mineiro.h Montanha.cpp Montanha.h Operario.cpp Operario.h Pantano.cpp Pantano.h Pastagem.cpp Pastagem.h Recursos.cpp Recursos.h Serracao.cpp Serracao.h Barragem.cpp Barragem.h Favela.cpp Favela.h)
